Fixed a bug: the gameHeader width extended way too much to the right

--- a/src/assets/css/components/_gameHeader.scss
+++ b/src/assets/css/components/_gameHeader.scss
@@ -3,7 +3,9 @@
   justify-content: space-between;
   position: absolute;
   width: 100%;
+  max-width: 1125.33px;
   margin-top: 20px;
   top: 0;
-  z-index: 10;
+  z-index: 1;
+  overflow: hidden;
 }
